# persian-ocr-bench

./: .gitignore  BENCHMARK_GUIDE.md  COLAB_GUIDE.md  DATASET_CARD.md  LICENSE  README.md  Roadmap.md  candidates.csv  google_colab_ocr_models.ipynb  leaderboard.py  main.py  models.yaml  ppocrv5_arabic_mobile_rec.py  pyproject.toml  tesseract_fas.py
bench_runs/: ppocrv5_arabic_mobile_rec.json  tesseract_fas.json
bench_runs/archives/smoke20-v1-20260713T064423Z/: easyocr_fa.json  state.json
bench_runs/archives/smoke20-v1-20260713T065619Z/: easyocr_fa.json  state.json  tesseract_fas.json
bench_runs/leaderboard/: leaderboard.csv  leaderboard.json  leaderboard_by_type.csv  leaderboard_by_type.json  report_manifest.json  screening_report.csv  screening_report.json  screening_report.md  screening_slices.csv
bench_runs/smoke20-v1/: easyocr_fa.json  ppocrv5_arabic_mobile_rec.json  provenance.json  tesseract_fas.json
data/: manifest.jsonl
docs/: benchmark_metrics.md  colab_benchmark_runbook.md  plan.md  project_brief.md  smoke_dataset.md
docs/telegram/: OUTREACH.md  TOPIC_PINS.md
ocr-community-report/: claim_cards.md  report.md  sources.md  task_contract.md
scripts/: benchmark.py  benchmark_chandra_ocr2.py  benchmark_deepseek_ocr.py  benchmark_deepseek_ocr2.py  benchmark_dots_mocr.py  benchmark_dots_ocr.py  benchmark_easyocr_fa.py  benchmark_falcon_ocr.py  benchmark_glm_ocr.py  benchmark_got_ocr2.py  benchmark_hezarai_crnn_fa_v2.py  benchmark_hunyuan_ocr.py  benchmark_infinity_parser2_flash.py  benchmark_infinity_parser2_pro.py  benchmark_kdl_frontier_parser_nano.py  benchmark_khanandeh.py  benchmark_kraken_fas.py  benchmark_lightonocr2_1b.py  benchmark_mineru25_pro.py  benchmark_nanonets_ocr2_15b.py  benchmark_paddleocr_vl.py  benchmark_ppocrv5_fa.py  benchmark_qwen3_vl_persian_arabic_ocr.py  benchmark_surya.py  benchmark_tesseract_fas.py  benchmark_unlimited_ocr_gguf.py  benchmark_weightedai_persian_ocr.py  build_screening_report.py  build_smoke_images.py  capture_benchmark_provenance.py  merge_small_bench.py  models_status.py  ocr_bench.py  pull.py  pull_all.py  pull_chandra_ocr2_model.py  pull_deepseek_ocr2_model.py  pull_deepseek_ocr_model.py  pull_dots_mocr_model.py  pull_dots_ocr_model.py  (+26 more)
small_bench/: AUDIT_REPORT.md  CHANGELOG.md  DATASET_CARD.md  HUMAN_REVIEW_GUIDE.md  SCHEMA.md  dataset_identity.json  hand-written.json  manifest.jsonl  references.jsonl  review_index.html  review_queue.csv  sample_summary.csv  typed.json
small_bench/hand-written/: 1.md  10.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
small_bench/legacy_original/: manifest.jsonl
small_bench/scripts/: validate_dataset.py
small_bench/typed/: 1.md  10.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
src/: __init__.py  easyocr_fa.py  leaderboard.py  ppocrv5_arabic_mobile_rec.py  tesseract_fas.py
src/persian_ocr/: __init__.py  __main__.py  artifacts.py  catalog.py  dataset.py  devices.py  leaderboard.py  metrics.py  normalization.py  paths.py  ppocrv5_arabic_mobile_rec.py  preprocessing.py  registry.py  reporting.py  results.py  scoring.py  tesseract_fas.py  tesseract_preprocess.py
src/persian_ocr/adapters/: __init__.py  _shared.py  base.py  chandra.py  deepseek.py  easyocr_fa.py  gguf.py  paddle.py  ppocrv5_arabic_mobile_rec.py  surya.py  tesseract_fas.py  traditional.py  transformers_vlm.py
