[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persian-ocr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==1.23.0",
    "matplotlib>=3.11.0",
    "numpy>=1.24,<2.4",
    "opencv-python-headless>=5.0.0.93",
    "paddleocr==3.7.0",
    "paddlepaddle==3.3.1",
    "pillow>=12.3.0",
    "pytesseract>=0.3.13",
    "rapidfuzz>=3.14.5",
    "regex>=2026.7.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/persian_ocr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/persian_ocr",
    "models.yaml",
    "pyproject.toml",
    "small_bench",
]
