[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "persian-ocr"
version = "0.2.0"
description = "Reproducible Persian OCR screening and benchmark tooling"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pillow>=12.3.0",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.14.5",
    "regex>=2026.7.10",
]

[project.optional-dependencies]
tesseract = [
    "numpy>=1.24,<2.4",
    "opencv-python-headless>=5.0.0.93",
    "pytesseract>=0.3.13",
]
paddle = [
    "huggingface-hub==1.23.0",
    "numpy>=1.24,<2.4",
    "opencv-python-headless>=5.0.0.93",
    "paddleocr==3.7.0",
    "paddlepaddle==3.3.1",
]
easyocr = [
    "easyocr==1.7.2",
    "numpy>=1.24,<2.4",
    "opencv-python-headless>=5.0.0.93",
]
plots = [
    "matplotlib>=3.11.0",
]
all = [
    "easyocr==1.7.2",
    "huggingface-hub==1.23.0",
    "matplotlib>=3.11.0",
    "numpy>=1.24,<2.4",
    "opencv-python-headless>=5.0.0.93",
    "paddleocr==3.7.0",
    "paddlepaddle==3.3.1",
    "pytesseract>=0.3.13",
]

[project.scripts]
persian-ocr = "persian_ocr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/persian_ocr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/persian_ocr",
    "scripts/smoke_package.py",
    "models.yaml",
    "small_bench",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "uv.lock",
]
